# QTMaat

./: .gitignore  CMakeLists.txt  README.md  addsensordialog.cpp  addsensordialog.h  circlescontrol.cpp  circlewidget.cpp  circlewidget.h  datatypes.h  engenharia.json  loghandler.cpp  loghandler.h  logservowindow.cpp  logservowindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  removesensordialog.cpp  removesensordialog.h  resources.qrc  sensorselectionwindow.cpp  sensorselectionwindow.h  serialhandler.cpp  serialhandler.h  serialmicronas.cpp  serialmicronas.h  servominas.cpp  servominas.h  setcap.sh  updatesensordialog.cpp  updatesensordialog.h  userlogin.cpp  userlogin.h  usershandler.cpp  usershandler.h  viewsensorsdialog.cpp  viewsensorsdialog.h  worker.cpp  worker.h
minas_src/: ethercat_manager.cpp  main.cpp  minas_app.cpp  minas_app.h  minas_client.cpp  minas_client.h
